--- a/PebbleBart/PebbleBart/Base.lproj/Main.storyboard
+++ b/PebbleBart/PebbleBart/Base.lproj/Main.storyboard
@@ -41,6 +41,16 @@
                                     <action selector="tapButton:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="07h-TM-zPu"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GIg-vB-s64">
+                                <rect key="frame" x="197" y="437" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="tapButton2:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="lgU-NG-28G"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
