--- a/PebbleBart/PebbleBart/Base.lproj/Main.storyboard
+++ b/PebbleBart/PebbleBart/Base.lproj/Main.storyboard
@@ -115,6 +115,11 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="vwl-Vz-DRO">
                         <barButtonItem key="leftBarButtonItem" systemItem="search" id="LhO-ZM-N2r"/>
+                        <barButtonItem key="rightBarButtonItem" title="Push" id="70s-Mr-9Pl">
+                            <connections>
+                                <action selector="pushToPhone:" destination="ceo-Mn-i2U" id="1Bd-Yz-efv"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1ry-f5-y4s" userLabel="First Responder" sceneMemberID="firstResponder"/>
